--- a/src/main/resources/static/admin/banners/css/banners.css
+++ b/src/main/resources/static/admin/banners/css/banners.css
@@ -1,88 +1,88 @@
-table.dataTable tbody tr {
-    background-color: white !important;
-}
-
 .container {
-   display: flex;
-   flex-direction: column;
-   height: 100%; /* 전체 높이 */
+	display: flex;
+	flex-direction: column;
+	height: 100%; /* 전체 높이 */
 }
 
 .filter-container {
-   background: #FFFFFF;
-   border-radius: 20px;
-   padding: 20px 26px;
-   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-   
+	background: #FFFFFF;
+	border-radius: 20px;
+	padding: 20px 26px;
+	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .table-container {
-   margin-top : 20px;
-   height: 70%; /* 화면의 하단 70% */
-   background: #FFFFFF;
-   border-radius: 20px;
-   padding: 20px;
-   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-   overflow-y: auto; /* 테이블 내용이 넘칠 경우 스크롤 */
+	margin-top: 20px;
+	height: 70%; /* 화면의 하단 70% */
+	background: #FFFFFF;
+	border-radius: 20px;
+	padding: 20px;
+	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+	overflow-y: auto; /* 테이블 내용이 넘칠 경우 스크롤 */
 }
 
 .header h1 {
-   font-weight: 700;
-   font-size: 18px;
-   line-height: 24px;
-   color: #000000;
-   margin-bottom: 20px;
+	font-weight: 700;
+	font-size: 18px;
+	line-height: 24px;
+	color: #000000;
+	margin-bottom: 20px;
 }
 
 .content {
-   display: flex;
-   flex-direction: column;
+	display: flex;
+	flex-direction: column;
 }
 
 .search-filter, .radio-group, .search-bar-group {
-   display: flex;
-   flex-direction: column;
-   gap: 10px;
+	display: flex;
+	flex-direction: column;
+	gap: 10px;
 }
 
 .search-list-title {
-    margin-bottom: 20px;
+	margin-bottom: 20px;
 }
 
 .insert-subject {
 	width: 100px;
 }
 
-.insert-filter {
-   display: flex;
-   flex-direction: row;
-   align-items: center;
-   gap: 10px;
-   border-bottom: 1px solid #D8D8D8;
-   padding-bottom: 8px;
-}
-
-.required {
+.required::after {
+    content: "*";
 	color: #E54F53;
 	display: inline-block;
+    font-weight: bold;
+    margin-left: 2px;
+    position: absolute;
+    transform: translateY(-45%);
 }
 
-.filter-group, .radio-group, .search-bar-group, .banner-info{
-   display: flex;
-   flex-direction: row;
-   align-items: center;
-   gap: 10px;
-   border-bottom: 1px solid #D8D8D8;
-   padding-left: 20px;
-   height: 60px;
+.insert-filter {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	gap: 10px;
+	border-bottom: 1px solid #D8D8D8;
+	padding-bottom: 8px;
+}
+
+.filter-group, .radio-group, .search-bar-group, .banner-info {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	gap: 10px;
+	border-bottom: 1px solid #D8D8D8;
+	padding-left: 20px;
+	height: 60px;
 }
 
 .label {
-   font-size: 16px;
-   line-height: 24px;
-   color: #000000;
-   margin-left: 40px;
-   margin-right: 60px;
+	font-size: 16px;
+	line-height: 24px;
+	color: #000000;
+	margin-left: 40px;
+	margin-right: 60px;
 }
 
 .input-date-box {
@@ -91,21 +91,21 @@ table.dataTable tbody tr {
 }
 
 .insert-input {
-   display: flex;
-   align-items: center;
-   width: 300px;
-   height: 40px;
-   padding: 0 10px;
-   background: #FFFFFF;
-   border: 1px solid #C0C0C0;
-   border-radius: 5px;
+	display: flex;
+	align-items: center;
+	width: 300px;
+	height: 40px;
+	padding: 0 10px;
+	background: #FFFFFF;
+	border: 1px solid #C0C0C0;
+	border-radius: 5px;
 }
 
 .input-box .placeholder {
-   border: none;
-   height: 30px;
-   font-size: 14px;
-   color: #CCCCCC;
+	border: none;
+	height: 30px;
+	font-size: 14px;
+	color: #CCCCCC;
 }
 
 .radio-wrap {
@@ -115,97 +115,95 @@ table.dataTable tbody tr {
 }
 
 .search-bar {
-   display: flex;
-   flex-direction: row;
-   align-items: center;
-   width: 300px;
-   height: 40px;
-   padding: 0 10px;
-   background: #FFFFFF;
-   border: 1px solid #C0C0C0;
-   border-radius: 5px;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	width: 300px;
+	height: 40px;
+	padding: 0 10px;
+	background: #FFFFFF;
+	border: 1px solid #C0C0C0;
+	border-radius: 5px;
 }
 
 .input-group {
-   display: flex;
-   justify-content: space-between;
-   width: 100%;
-   align-items: center;
+	display: flex;
+	justify-content: space-between;
+	width: 100%;
+	align-items: center;
 }
 
 .input-group input {
-   border: none;
-   outline: none;
-   width: 100%;
-   font-size: 16px;
-   color: #000000;
+	border: none;
+	outline: none;
+	width: 100%;
+	font-size: 16px;
+	color: #000000;
 }
 
 .calendar-slash {
-   margin-top: 10px;
+	margin-top: 10px;
 }
 
 .dt-column-title {
-    color: #7E7E7E;
+	color: #7E7E7E;
 }
 
 .table-title-wrap {
-    margin-bottom: 10px;
+	margin-bottom: 10px;
 }
 
 .table-title-wrap, .button-wrap {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	align-items: center;
 }
 
 .button-wrap {
-    gap: 10px;
+	gap: 10px;
 }
 
 .image-wrap {
 	height: 150px;
 }
 
-.file-name {
-	display: flex;
-	font-size: 12px;
-	padding-top: 80px;
-	height: auto;
-	padding-left: 0;
+.img-input-wrap {
+	position: relative;
+	width: 200px;
+	height: 125px;
+}
+
+.input-file-label {
+	line-height: 120px;
 }
 
 .table thead {
-    background-color: #FAFAFA;
-    color: #7E7E7E;
-}    
+	background-color: #FAFAFA;
+	color: #7E7E7E;
+}
 
-.table th:not([align]), .table td:not([align]){
-    text-align: center;/* 텍스트 가운데 정렬 */
+.table th:not([align]), .table td:not([align]) {
+	text-align: center; /* 텍스트 가운데 정렬 */
 }
 
 .table td, .table thead th {
-	text-align: center; 
+	text-align: center;
 	vertical-align: middle; /* 수직 가운데 정렬 */
-    border-width: 1px 0 1px 0;
-    border-style: solid;
-    border-color: #D8D8D8;
-    height: 50px;
-}    
+	border-width: 1px 0 1px 0;
+	border-style: solid;
+	border-color: #D8D8D8;
+	height: 50px;
+}
 
 .status-btn-wrap {
-    margin-left: 10px;	
-}
-.material-symbols-outlined {
-  font-variation-settings:
-  'FILL' 0,
-  'wght' 400,
-  'GRAD' 0,
-  'opsz' 24
+	margin-left: 10px;
 }
 
-/* Center the DataTable pagination controls */
+.material-symbols-outlined {
+	font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 24
+}
+
 #banners_wrapper>.dt-paging {
 	display: flex;
 	justify-content: center;
@@ -216,13 +214,12 @@ table.dataTable tbody tr {
 	display: flex;
 	padding-bottom: 10px;
 	justify-content: right;
-	
 }
 
 .submit-btns {
-    padding-top: 20px;
-    display: flex;
-    flex-direction: row;
-    gap: 10px;
-    justify-content: center;
+	padding-top: 20px;
+	display: flex;
+	flex-direction: row;
+	gap: 10px;
+	justify-content: center;
 }
