--- a/src/main/resources/templates/admin/banners/bannerDetail.html
+++ b/src/main/resources/templates/admin/banners/bannerDetail.html
@@ -17,16 +17,12 @@
             <input type="hidden" name="banner_num" th:value="${banners.banner_num}">
 
             <div class="banner-info">
-                <div class="insert-subject">
-                    제목 <label class="required">*</label>
-                </div>
+                <div class="insert-subject required">제목</div>
                 <input type="text" name="banner_title" class="insert-input" th:value="${banners.banner_title}" required>
             </div>
 
             <div class="radio-group">
-                <div class="insert-subject">
-                    유형 <label class="required">*</label>
-                </div>
+                <div class="insert-subject required">유형</div>
                 <div class="radio-wrap">
                     <input type="radio" name="banner_position" value="01" id="position-banner" class="radio" th:checked="${banners.banner_position == '01'}"> <label for="position-banner">배너</label> 
                     <input type="radio" name="banner_position" value="02" id="position-popup" class="radio" th:checked="${banners.banner_position == '02'}"> <label for="position-popup">팝업</label>
@@ -34,9 +30,7 @@
             </div>
 
             <div class="radio-group">
-                <div class="insert-subject">
-                    노출 여부 <label class="required">*</label>
-                </div>
+                <div class="insert-subject required">노출 여부</div>
                 <div class="radio-wrap">
                     <input type="radio" name="banner_visible" value="01" id="visible" class="radio" th:checked="${banners.banner_visible == '01'}"> <label for="visible">노출</label> 
                     <input type="radio" name="banner_visible" value="02" id="hidden" class="radio" th:checked="${banners.banner_visible == '02'}"> <label for="hidden">비노출</label>
@@ -44,9 +38,7 @@
             </div>
 
             <div class="banner-info">
-                <div class="insert-subject">
-                    노출 기간 <label class="required">*</label>
-                </div>
+                <div class="insert-subject required">노출 기간</div>
                 <div class="date-picker">
                     <div class="input-date-box">
                         <input type="text" name="banner_start" id="startDate" class="placeholder" placeholder="YYYY-MM-DD" th:value="${#dates.format(banners.banner_start, 'yyyy-MM-dd')}" />
@@ -60,32 +52,27 @@
                 </div>
             </div>    
 
-            <div class="banner-info image-wrap">
-                <div class="insert-subject">
-                    이미지 <label class="required">*</label>
-                </div>
-                <div class="img-input-wrap">
-                    <label for="input-file" class="input-file-label"> 
-                        <i class="fa-solid fa-plus"></i> 
-                    </label> 
-                    <input type="file" name="banner_image" id="input-file" class="input-img-file" th:value="${banners.banner_original}" />
-                </div>
-                <input type="hidden" id="original-file-name" name="banner_original" value="${banners.banner_original}" />
-                <input type="hidden" id="changed-file-name" name="banner_changed" value="${banners.banner_changed}" />
-                <div class="file-name" th:text="${banners.banner_original}"></div>
-            </div>
+			<div class="banner-info image-wrap">
+				<div class="insert-subject required">이미지</div>
+				
+				<div class="img-input-wrap">
+					<label for="input-file" class="input-file-label"> 
+						<input type="file" name="banner_image" id="input-file" class="input-img-file" accept=".jpg, .jpeg, .png" onchange="previewImage(event)"/>
+						<img th:src="@{/admin/common/img/banners/{banners}(banners=${banners.banner_changed != null ? banners.banner_changed : ''})}" alt="배너" id="preview" style="display: block;"/>
+					</label> 
+				</div>
+				<label>형식 : JPG, JPEG, PNG </label>
+			</div>
             
             <div class="button-wrap submit-btns">
                 <button type="submit" id="update-button"class="default-btn">수정</button>
-                <button class="default-btn cancel" onclick="location.href='/admin/index?path=admin/banners/banners'">취소</button>
+                <button type="button" class="default-btn cancel" onclick="location.href='/admin/index?path=admin/banners/banners'">취소</button>
             </div>
         </form>
     </div>
 
-	<script src="/admin/common/js/main.js"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
-    <script src="/admin/banners/js/bannerInsert.js"></script>
     <script src="/admin/banners/js/bannerUpdate.js"></script>
 </body>
 </html>
