Feat: 홈페이지 추가 및 common css 일부 수정

--- a/src/main/resources/templates/admin/products/add-product.html
+++ b/src/main/resources/templates/admin/products/add-product.html
@@ -125,10 +125,11 @@
                 <p>형식 : JPG, JPEG, PNG</p>
                 <div class="img-input-wrap">
                     <label for="input-file" class="input-file-label">
+                        <img th:src="@{/admin/common/img/products/{products}(products=${book_thumbnail_changed != null ? book_thumbnail_changed : 'noimg.png'})}"
+                             alt="책썸네일" id="preview"/>
                         <i class="fa-solid fa-plus"></i>
-                        <img src="" alt="Book Thumbnail" id="preview"/>
                     </label>
-                    <input type="file" name="thumbnail_img_file" id="input-file" class="input-img-file" accept="image/jpeg, image/png, image/jpg"/>
+                    <input type="file" name="thumbnail_img_file" id="input-file" class="input-img-file" accept="image/jpeg, image/png, image/jpg" />
                 </div>
             </div>
         </div>
@@ -143,7 +144,7 @@
 
     <div class="button-wrap">
         <button class="default-btn" id="add-btn" form="add-form">등록</button>
-        <button class="default-btn cancel" onclick="location.href='/admin/products/products'">취소</button>
+        <button class="default-btn cancel" onclick="location.href='/admin/index?path=admin/products/products'">취소</button>
     </div>
 </div>
 
