--- a/src/main/resources/templates/admin/reviews/reviews.html
+++ b/src/main/resources/templates/admin/reviews/reviews.html
@@ -50,7 +50,9 @@
 			
 			    <div class="search-container">
      				<input type="text" name="" id="searchKeyword" class="searchKeyword search-input" placeholder="검색할 내용 입력" />
-     				<button id="searchButton"><span class="material-symbols-outlined">search</span></button>	
+     				<button id="searchButton">
+     					<span class="material-symbols-outlined">search</span>
+     				</button>	
 	   			</div>	
 				<button id="reset-button" onclick="resetFilters()">초기화</button>			
 			</div>	
