--- a/src/main/resources/static/admin/inquiries/css/inquiries.css
+++ b/src/main/resources/static/admin/inquiries/css/inquiries.css
@@ -4,3 +4,9 @@
 	align-items: center;
 	margin-bottom: 20px;
 }
+.radio-filter {
+	align-content: center;
+}
+.disabled {
+	pointer-events: none;
+}
