--- a/src/main/resources/static/admin/myinfo/css/myinfo.css
+++ b/src/main/resources/static/admin/myinfo/css/myinfo.css
@@ -1,16 +1,17 @@
 /* 공통 스타일 */
 input, select {
-    margin-left: 50px;
+	margin-left: 50px;
 }
 
 .text-readonly {
 	margin-left: 50px;
 }
+
 label {
-    margin-left: 80px;
+	margin-left: 80px;
 }
 
-.input-file-label{
+.input-file-label {
 	margin-left: 50px;
 }
 
@@ -18,20 +19,23 @@ label {
 	width: 300px;
 	height: 40px;
 }
+
 .info-items {
-	display : flex;
-	align-items:center;
-	
+	display: flex;
+	align-items: center;
 }
+
 .gray-text {
-	width: 300px;	
+	width: 300px;
 }
+
 .gray-num {
-	margin-left : 20px;
+	margin-left: 20px;
 	width: 60px;
 }
+
 .info {
-    display: grid;
+	display: grid;
 	grid-template-columns: 100px 1fr;
 	align-items: center;
 	gap: 10px;
@@ -40,72 +44,83 @@ label {
 }
 
 .search-list-title:first-child {
-    margin-bottom: 30px;
+	margin-bottom: 30px;
 }
+
 .important::after {
 	content: "*";
-    color: red; 
-    font-weight: bold;
-    margin-left: 2px;
-    position: absolute; /* 별표의 절대 위치 지정 */
-    transform: translateY(-45%); /* 별표를 더 위쪽으로 이동 */
+	color: red;
+	font-weight: bold;
+	margin-left: 2px;
+	position: absolute; /* 별표의 절대 위치 지정 */
+	transform: translateY(-45%); /* 별표를 더 위쪽으로 이동 */
+}
+
+.error-message {
+	margin-left: 50px;
+	color: red;
+	font-size: 0.9em;
+	display: none;
 }
 
 .select-box {
-    display: flex;
-    align-items: center; /* 자식 요소들을 수직 중앙 정렬 */
-    position: relative;  /* 필요 시 position relative 사용 */
+	display: flex;
+	align-items: center; /* 자식 요소들을 수직 중앙 정렬 */
+	position: relative; /* 필요 시 position relative 사용 */
 }
 
 .select-arrow-down {
-    margin-right: 5px; /* 선택 상자와 화살표 사이에 간격 추가 */
+	margin-right: 5px; /* 선택 상자와 화살표 사이에 간격 추가 */
 }
 
 /* 특정 요소 스타일 */
 select#emailUser, select#deptName, select#emailDomain {
-    width: 150px;
-    margin-left: 20px;
+	width: 150px;
+	margin-left: 20px;
 }
 
 select#countryNum {
-    width: 80px;
+	width: 80px;
 }
 
 .input-file-label {
-    margin-right: 30px;
+	margin-right: 30px;
 }
 
 .btn {
 	margin-top: 30px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	gap: 20px;
 }
 
 .search-list-subject-symbol {
-    margin-left: 20px;
+	margin-left: 20px;
 }
 
 span.search-list-subject {
-    margin-left: 30px;
+	margin-left: 30px;
 }
 
 div#email.select-arrow-down, div#dept.select-arrow-down {
-    margin-left: 30px;
+	margin-left: 30px;
 }
 
-select#deptName{
-	margin-left:50px;
+select#deptName {
+	margin-left: 50px;
 }
 
 #preview {
 	width: 100%;
-    height: 100%;
-    object-fit: cover;
+	height: 100%;
+	object-fit: cover;
 }
+
 .btn-box {
 	display: flex;
 	justify-content: center;
-	align-items: center; gap: 20px;
+	align-items: center;
+	gap: 20px;
+	margin-top: 30px;
 }
