Fix: 파비콘 수정, modal css 수정 / 상품관리페이지 일부 수정

--- a/src/main/resources/static/admin/common/css/modal.css
+++ b/src/main/resources/static/admin/common/css/modal.css
@@ -56,7 +56,6 @@
 }
 
 .modal-footer .modal-btn.confirm {
-   border-right: .5px solid #C0C0C0;
    color: #4777F6;
    font-size: 16px;
    font-weight: 700;
@@ -67,5 +66,6 @@
 }
 
 .modal-footer .modal-btn.cancel {
+   border-left: .5px solid #C0C0C0;
    color: #666;
 }
