--- a/src/main/resources/templates/admin/products/add-product.html
+++ b/src/main/resources/templates/admin/products/add-product.html
@@ -144,7 +144,7 @@
 
     <div class="button-wrap">
         <button class="default-btn" id="add-btn" form="add-form">등록</button>
-        <button class="default-btn cancel" onclick="location.href='/admin/index?path=admin/products/products'">취소</button>
+        <button class="default-btn cancel" onclick="location.href='/admin/products/products'">취소</button>
     </div>
 </div>
 
