--- a/src/main/resources/static/admin/customer_orders/css/list.css
+++ b/src/main/resources/static/admin/customer_orders/css/list.css
@@ -13,3 +13,19 @@
 	align-items: center;
 	margin-bottom: 20px;
 }
+
+.order-detail-link {
+	text-decoration: underline;
+}
+
+.text-color-red {
+    color: red !important;
+}
+
+.text-color-green {
+    color: #10A142 !important;
+}
+
+.dt_data_text_center {
+	text-align: center !important;
+}
