--- a/src/main/resources/static/admin/supplier_orders/css/list.css
+++ b/src/main/resources/static/admin/supplier_orders/css/list.css
@@ -6,5 +6,13 @@
 }
 
 table td:not([align]), table th:not([align]) {
-    text-align: center;
+    text-align: center !important;
+}
+
+.text-color-blue {
+	color: #4777F6 !important;
+}
+
+.order-detail-link {
+	text-decoration: underline;
 }
