--- a/src/main/resources/templates/admin/customer_orders/customerDetail.html
+++ b/src/main/resources/templates/admin/customer_orders/customerDetail.html
@@ -110,16 +110,19 @@
 				<div class="book-title-column"><span>책제목</span></div>
 				<div class="isbn-column"><span>ISBN</span></div>
 				<div class="price-column"><span>가격</span></div>
-				<div class="qty-column"><span>수량</span></div>
+				<div class="qty-column"><span>주문수량</span></div>
+				<div class="request-qty-column">요청수량</div>
+				<div class="input-qty-column">처리수량</div>
 				<div class="purchase-column"><span>구매금액</span></div>
 				<div class="order-status-column"><span>주문상태</span></div>
 			</div>
-			<form id="table-form" action="/admin/customerOrders/orderStatusUpdate" method="GET">
+			<form id="table-form">
 				<div class="table-data-area" th:each="info, status : ${detailList}">
 					<div class="checkbox-data">
 						<span>
-							<input type="checkbox" id="select-row" name="order_detail_num" class="row-checkbox" th:value="${info.order_detail_num}">
+							<input type="checkbox" id="select-row" class="row-checkbox">
 							<label for="select-row"></label>
+							<input type="hidden" name="order_detail_num" th:value="${info.order_detail_num}" />
 						</span>
 					</div>
 					<div class="no-data">
@@ -140,12 +143,20 @@
 						<span th:text="${info.order_detail_qty} + '개'"></span>
 						<input type="hidden" name="order_detail_qty" th:value="${info.order_detail_qty}"/>
 					</div>
+					<div class="request-qty-data">
+						<span th:text="${info.order_detail_qty <= 0 ? '-' : info.order_request_qty} + '개'"></span>
+						<input type="hidden" name="order_request_qty" th:value="${info.order_request_qty}"/>
+					</div>
+					<div class="input-qty-data">
+						<span><input type="number" name="input_qty" id="input_qty" oninput="qtyHandler(this);" th:value="${info.order_request_qty}"/></span>
+					</div>
 					<div class="purchase-data" >
 						<span th:text="${#numbers.formatInteger(info.order_price_sum, 0, 'COMMA')} + '원'"></span>
 					</div>
 					<div class="order-status-data request-text-red" th:if="${info.order_detail_status eq '취소요청' or info.order_detail_status eq '교환요청' or info.order_detail_status eq '반품요청'}">
 						<div>
 							<span th:text="${info.order_detail_status}"></span>
+							<input type="hidden" name="order_detail_status" th:value="${info.order_detail_status}" />
 						</div>
 					</div>
 					<div class="order-status-data" th:if="${info.order_detail_status ne '취소요청' and info.order_detail_status ne '교환요청' and info.order_detail_status ne '반품요청'}">
@@ -155,8 +166,6 @@
 						</div>
 					</div>
 				</div>
-				<input type="hidden" name="order_selected_status"/>
-				<input type="hidden" name="order_num" th:value="${detail.order_num}"/>
 			</form>
 			<div class="total-price-area">
 				<span th:text="'총 금액: ' + ${#numbers.formatInteger(detail.order_price_total, 0, 'COMMA')} + '원'"></span>
@@ -164,6 +173,10 @@
 		</div>
 	</div>
 	
+	<form id="submit-form" action="/admin/customerOrders/orderStatusUpdate" method="GET">
+		<input type="hidden" name="order_selected_status"/>
+		<input type="hidden" name="order_num" th:value="${detail.order_num}"/>
+	</form>
 	<script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 	<script src="/admin/customer_orders/js/detail.js"></script>
 </div>
