Fix : 주소 입력창 포인터 적용

--- a/src/main/resources/static/admin/managers/css/managerReg.css
+++ b/src/main/resources/static/admin/managers/css/managerReg.css
@@ -102,3 +102,7 @@ select#deptName{
     font-size: 12px; /* 글자 크기 조정 */
     color: #666666; /* 글자 색상 조정 */
 }
+
+.pointer-cursor {
+    cursor: pointer;
+}
