--- a/src/main/resources/templates/admin/managers/managerReg.html
+++ b/src/main/resources/templates/admin/managers/managerReg.html
@@ -16,9 +16,9 @@
 				    <span class="search-list-subject important">아이디</span>
 				<div class="id-area">
 					<input type="text" id="manager_id" name="manager_id" placeholder="아이디를 입력해주세요">			    
-		       		<div class="id-reference">※ 영문자와 숫자, 최소 5자</div>
+		       		<div class="id-reference" style="color: red;">※ 영문자와 숫자, 최소 5자</div>
 	       		</div>
-			    <span id="idCheckForm" class="check-comment" style="color: red; display: none;">아이디 양식과 일치하지 않습니다.</span>			    
+			    <span id="idCheckForm" class="check-comment" style="color: red; display: none;" >아이디 양식과 일치하지 않습니다.</span>			    
 			    <span id="idCheckResult" class="check-comment" style="color: red; display: none;">이미 사용 중인 아이디입니다.</span>
 			    <span id="idCheckSuccess" class="check-comment" style="color: green; display: none;">사용 가능한 아이디입니다.</span>
 			</div>
@@ -27,7 +27,7 @@
 					<span class="search-list-subject important">비밀번호</span> 
 				<div class="pw-area">
 					<input type="password" class="pw" name="manager_pw" id="manager_pw" placeholder="비밀번호를 입력해주세요">
-					<div class="pw-reference">※ 특수문자, 영문자, 숫자 포함, 최소 8자</div>
+					<div class="pw-reference" style="color: red;">※ 특수문자, 영문자, 숫자 포함, 최소 8자</div>
 				</div>
 				
 			</div>
@@ -89,7 +89,7 @@
 			
 			<div class="info">
 				<span class="search-list-subject important">주소</span>
-				<input type="text" id="address_kakao" name="manager_addr" class="gray-text" />
+				<input type="text" id="address_kakao" name="manager_addr" class="gray-text pointer-cursor" />
 			</div>
 			<div class="info">
 				<span class="search-list-subject important">상세주소</span>
