--- a/src/main/resources/templates/admin/members/memberDetails.html
+++ b/src/main/resources/templates/admin/members/memberDetails.html
@@ -86,7 +86,7 @@
 		
 		<div class="info">
 			<span class="search-list-subject">주소</span>
-			<input type="text" id="address_kakao" name="member_addr" th:value="${member_details.member_addr}" class="gray-text" readonly />
+			<input type="text" id="address_kakao" name="member_addr" th:value="${member_details.member_addr}" class="gray-text pointer-cursor" readonly />
 		</div>
 		
 		<div class="info">
