Feat: 홈 페이지 수정, 사이드바 메뉴 수정, 상품관리 이미지 업로드 수정 Design: common.css 테이블 초기화 내용 추가

--- a/src/main/resources/static/admin/common/css/common.css
+++ b/src/main/resources/static/admin/common/css/common.css
@@ -477,15 +477,25 @@ input[type='number'] {
 	border-width: 1px 0 1px 0;
 	border-style: solid;
 	border-color: #D8D8D8;
-}
-/* 가운데 정렬 */
-.table-center td, .table-center th {
-	text-align: center;
 	vertical-align: middle;
+	color: #7E7E7E;
+}
+
+table td:not([align]), table th:not([align]) {
+	text-align: center;
+}
+
+.table th:not([align]) {
+	text-align: center;
 }
 
 /* 테이블 로우 사이즈, 글자 정렬 */
 .table td {
 	height: 50px;
 	vertical-align: middle;
+}
+
+.table td > a {
+	color: #7E7E7E;
+	cursor: pointer;
 }
