--- a/src/main/resources/templates/admin/home/home.html
+++ b/src/main/resources/templates/admin/home/home.html
@@ -98,9 +98,8 @@
             <tr class="table-column-head">
                 <th class="table-column-head-txt">NO</th>
                 <th class="table-column-head-txt">입출고번호</th>
-                <th class="table-column-head-txt">분류</th>
-                <th class="table-column-head-txt">답변여부</th>
-                <th class="table-column-head-txt">작성일</th>
+                <th class="table-column-head-txt">상태</th>
+                <th class="table-column-head-txt">작업일</th>
             </tr>
             </thead>
             <tbody></tbody>
