--- a/src/main/resources/templates/common/fragments/sidebar.html
+++ b/src/main/resources/templates/common/fragments/sidebar.html
@@ -169,7 +169,7 @@
         </li>
       </ul>
     </li>
-    <li class="menu-items">
+    <li class="menu-items" onclick="location.href='/admin/myinfo'">
       <div class="menu-content">
         <img src="/admin/common/img/bar-active-black.png" alt="bar" class="bar-img" />
         <div class="menu-right">
@@ -177,7 +177,7 @@
             <div class="icon-img-wrap">
               <i class="fa-solid fa-circle-user icon-img black"></i>
             </div>
-            <p><a href="/admin/myinfo">내정보</a></p>	
+            <p>내정보</p>
           </div>
         </div>
       </div>
