--- a/src/main/resources/static/admin/common/css/reset.css
+++ b/src/main/resources/static/admin/common/css/reset.css
@@ -13,6 +13,7 @@ output, ruby, section, summary, time, mark, audio, video {
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
+	box-sizing: border-box;
 }
 
 html {
