--- a/src/main/resources/static/admin/login/css/login.css
+++ b/src/main/resources/static/admin/login/css/login.css
@@ -1,33 +1,32 @@
-body, html {
-	height: 100%;
-	margin: 0;
-	display: flex;
-	justify-content: center; /* 수평 중앙 정렬 */
-	align-items: center;     /* 수직 중앙 정렬 */
-	background-color: #f5f5f5; /* 배경색 설정, 필요에 따라 조정 */
-}
-
 .inner {
+    max-width: 1440px;
+    height: 100vh;
+    margin: 0 auto;
+    background-color: #EBECF0;
     display: flex;
-    justify-content: center; /* 수평 중앙 정렬 */
-    align-items: center;     /* 수직 중앙 정렬 */
-    flex-direction: column;  /* 세로로 정렬 */
-    height: 100%;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .white-frame {
-    background-color: #ffffff;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-    text-align: center;
     width: 690px;
     height: 660px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    text-align: center;
 }
 
 .logo-wrap img {
     max-width: 100%;
     height: auto;    
+    margin-top: 80px;
+}
+
+.login-form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     margin-top: 80px;
 }
 
@@ -39,7 +38,6 @@ body, html {
 	height: 60px;
 	padding: 10px;
 	margin: 10px 0;
-	box-sizing: border-box;
 	background-color: white; /* 배경색 지정 */
 	font-size: 16px; /* 텍스트 크기 */
 	border-radius: 0; /* 모서리 둥글게 처리하지 않음 */
@@ -48,14 +46,9 @@ body, html {
 .default-btn {
 	width: 460px;
 	height: 60px;
-	padding: 10px;
-	background-color: #007bff;
-	color: white;
-	border: none;
-	border-radius: 5px;
-	cursor: pointer;
-	font-size: 16px;
-	margin-top: 30px;
+    margin-top: 50px;
+    font-size: 16px;
+    cursor: pointer;
 }
 
 .default-btn:hover {
@@ -68,30 +61,20 @@ body, html {
 	margin-left: 10px;
 }
 
-.white-frame {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 20px;
-    background-color: white;
-    border-radius: 10px;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-}
 .error-border {
-    border-bottom: 1px solid red !important;
+    border-bottom: 1px solid #E54F53 !important;
 }
 .error-message {
 	margin-left: 20px;
     color: #E54F53;
     font-size: 12px;
 }
+
 .frame {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    padding: 0;
-    width: 460px;
-    box-sizing: border-box;
+    gap: 5px;
 }
 
 .input-container {
@@ -101,7 +84,6 @@ body, html {
     align-items: flex-start;
     width: 460px;
     height: 60px;
-    box-sizing: border-box;
     border-bottom: 2px solid #ddd; /* 기본 밑줄 색상 */
 }
 
