--- a/src/main/resources/templates/admin/login/login.html
+++ b/src/main/resources/templates/admin/login/login.html
@@ -3,8 +3,9 @@
 <head>
 <meta charset="UTF-8">
 <title>로그인 화면</title>
+<link rel="stylesheet" href="/admin/common/css/reset.css">
 <link rel="stylesheet" href="/admin/common/css/common.css" />
-<link rel="stylesheet" href="/admin/common/css/style.css" />
+<!--<link rel="stylesheet" href="/admin/common/css/style.css" />-->
 <link rel="stylesheet" href="/admin/login/css/login.css" />
 
 </head>
@@ -15,7 +16,7 @@
                 <img src="/admin/common/img/login-로고.png" alt="로고" />
             </div>
             
-            <form th:action="@{/loginProc}" method="POST">
+            <form th:action="@{/loginProc}" method="POST" class="login-form">
                 <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}"> <!-- CSRF 토큰 추가 -->
 
                 <div th:if="${param.accessError}" class="error-message">
@@ -26,7 +27,7 @@
                     <div class="input-container" id="usernameContainer" 
                          th:classappend="${param.usernameError} ? 'error-border' : ''">
                         <input id="id" class="id" type="text" th:name="username" 
-                               placeholder="id" required />
+                               placeholder="아이디" required />
                     </div>
                     
                     <div th:if="${param.usernameError}" class="error-message">
@@ -40,7 +41,7 @@
                     <div class="input-container" id="passwordContainer" 
                          th:classappend="${param.passwordError} ? 'error-border' : ''">
                         <input id="password" class="password" type="password" th:name="password" 
-                               placeholder="password" required />
+                               placeholder="비밀번호" required />
                     </div>
                     
                     <div th:if="${param.passwordError}" class="error-message">
