Refactor : 이미지 저장 방식 수정

--- a/src/main/resources/templates/admin/inquiries/inquiries.html
+++ b/src/main/resources/templates/admin/inquiries/inquiries.html
@@ -40,6 +40,7 @@
 			<div class="filter-wrap">
 				<div class="select-wrap">
 					<select id="searchColumn2" class="select">
+						<option value="전체문의">전체문의</option>
 						<option value="상품문의">상품문의</option>
 						<option value="배송문의">배송문의</option>
 						<option value="결제문의">결제문의</option>
