--- a/src/main/resources/static/admin/notice/css/noticeReg.css
+++ b/src/main/resources/static/admin/notice/css/noticeReg.css
@@ -32,11 +32,12 @@
 .editor {
 	width: 100%;
 	height: 500px;
-	border: 2px solid #ccc;
+	border: 2px solid #D8D8D8;
 	padding: 10px;
 	overflow-y: auto;
 	background-color: #fafafa;
-	font-size: 16px;
+	font-size: 18px;
+	font-weight: 300;
 }
 
 .editor:focus {
@@ -46,4 +47,8 @@
 .editor.dragover {
 	border-color: #333;
 	background-color: #eaeaea;
+}
+
+#notice-title {
+	width: 500px;
 }
