--- a/src/main/resources/templates/admin/inquiries/inquiriesDetails.html
+++ b/src/main/resources/templates/admin/inquiries/inquiriesDetails.html
@@ -22,14 +22,31 @@
 			border: 1px solid #C0C0C0; /* 포커스 시에도 기본 보더 유지 */
 			outline: none; /* 포커스 시 아웃라인 제거 */
 		}
+
+		.answer-area {
+			margin-top: 30px; 
+			min-height: 350px;
+			height: auto;
+		}
+		/* 테이블 헤더 스타일 */
+		th {
+			padding: 10px;
+			text-align: left;
+			font-weight: bold;
+		}
+
+		/* 테이블 데이터 셀 스타일 */
+		td {
+			padding: 10px;
+		}
 	</style>
 
 <div>
 	<div class="container" style="padding-bottom: 30px;" th:with="status = ${inquiries.inquiry_answer_status}">
 		<!-- 뒤로가기 버튼 -->
-		<button class="back-btn"
-			onclick="location.href='/admin/inquiries/inquiries'">
-			<i class="fa-solid fa-chevron-left"></i> <span>뒤로가기</span>
+		<button class="back-btn" onclick="location.href='/admin/inquiries/inquiries'">
+			<i class="fa-solid fa-chevron-left"></i> 
+			<span>뒤로가기</span>
 		</button>
 
 		<!-- 리뷰 상세 정보 박스 -->
@@ -38,12 +55,12 @@
 				<span th:text="'문의번호 : ' + ${inquiries.inquiry_num}"></span>
 			</div>
 			<div class="text-group">
-				<span class="search-list-subject">제목</span> <span
-					th:text="${inquiries.inquiry_title}"></span>
+				<span class="search-list-subject">제목</span> 
+				<span th:text="${inquiries.inquiry_title}"></span>
 			</div>
 			<div class="text-group">
-				<span class="search-list-subject">작성자</span> <span
-					th:text="${inquiries.member_id}"></span>
+				<span class="search-list-subject">작성자</span> 
+				<span th:text="${inquiries.member_id}"></span>
 			</div>
 			<div class="text-group">
 				<span class="search-list-subject">작성날짜</span> 
@@ -51,27 +68,44 @@
 
 			</div>
 			<div class="text-group">
-				<span class="search-list-subject">문의 분류</span> <span
-					th:text="${inquiries.inquiry_type}"></span>
+				<span class="search-list-subject">문의 분류</span> 
+				<span th:text="${inquiries.inquiry_type}"></span>
 			</div>
 			<div class="text-group">
-				<span class="search-list-subject">내용</span> <span
-					th:text="${inquiries.inquiry_content}"></span>
+				<span class="search-list-subject">내용</span> 
+				<span th:text="${inquiries.inquiry_content}"></span>
 			</div>
 			<div class="text-group">
-				<span class="search-list-subject">파일첨부</span> <span
-					th:text="${inquiries.inquiries_changed}"></span>
+				<span class="search-list-subject">파일첨부</span> 
+				<span th:text="${inquiries.inquiries_changed}"></span>
 			</div>
 			<div class="text-group">
-				<span class="search-list-subject">답변여부</span> <span
-					th:text="${status}"
-					th:style="'color: ' + (${status == '처리완료'} ? '#10A142' : (${status == '미완료'} ? '#F69E47' : ''))"></span>
-				<span th:text="${inquiries.manager_id}"></span>
+				<span class="search-list-subject">답변여부</span> 
+				<span th:text="${status}" th:style="'color: ' + (${status == '처리완료'} ? '#10A142' : (${status == '미완료'} ? '#F69E47' : ''))"></span>
+			</div>
+			<div class="text-group" 
+			     th:if="${inquiries.inquiry_type == '취소문의' or 
+			            inquiries.inquiry_type == '교환문의' or 
+			            inquiries.inquiry_type == '반품문의'}">
+					<span class="search-list-subject">주문 번호</span>
+				<div>
+					<span th:text="${inquiries.order_num}"></span>
+				</div>
+					<span class="search-list-subject">주문 상세번호</span>
+				<div>
+					<span th:text="${inquiries.order_detail_num}"></span>
+				</div>
+					<span class="search-list-subject">요청 수량</span>
+				<div>
+					<span th:text="${inquiries.order_request_qty}"></span>
+				</div>
+				
 			</div>
 		</div>
 
+
 		<form th:action="@{${status == '처리완료' ? '/admin/inquiries/update' : '/admin/inquiries/insert'}}" th:object="${inquiries}" method="POST">
-			<div class="white-frame" style="margin-top: 30px; min-height: 350px; height: auto">
+			<div class="white-frame answer-area">
 				<div class="text-group" style="border-bottom: none;">
 					<span class="search-list-subject">답변내용</span> 
 					
@@ -84,8 +118,7 @@
             		</textarea>
 				</div>
 				<div class="btn-box">
-					<button type="submit" class="default-btn"
-						th:text="${inquiries.inquiry_answer_status == '처리완료' ? '수정' : '등록'}"></button>
+					<button type="submit" class="default-btn" th:text="${inquiries.inquiry_answer_status == '처리완료' ? '수정' : '등록'}"></button>
 					<button type="button" class="default-btn cancel" onclick="location.href='/admin/inquiries/inquiries'">취소</button>
 				</div>
 			</div>
