--- a/src/main/resources/templates/admin/myinfo/myinfo.html
+++ b/src/main/resources/templates/admin/myinfo/myinfo.html
@@ -136,7 +136,7 @@
             </div>
 			<div class="btn-box">
 				<button type="submit" class="default-btn">수정</button>
-				<button type="button" class="default-btn cancel" onclick="location.href='/admin/myinfo'">취소</button>
+				<button type="button" class="default-btn cancel" onclick="location.href='/admin/index'">취소</button>
 			</div>
 		</form>
     </div>
