--- a/src/main/resources/templates/admin/notice/notice.html
+++ b/src/main/resources/templates/admin/notice/notice.html
@@ -42,8 +42,8 @@
 				<p class="search-list-subject">검색어</p>
 				<div class="filter-wrap search-bar">								
 				    <div class="search-container">
-		     				<input type="text" name="" id="searchKeyword" class="searchKeyword search-input" placeholder="검색할 내용 입력" />
-		     				<button id="searchButton"><span class="material-symbols-outlined">search</span></button>	
+		     			<input type="text" name="" id="searchKeyword" class="searchKeyword search-input" placeholder="검색할 내용 입력" />
+		     			<button id="searchButton"><span class="material-symbols-outlined">search</span></button>	
 		   			</div>
 					<button id="reset-button" onclick="resetFilters()">초기화</button>			
 				</div>
@@ -70,6 +70,7 @@
 					<th class="table-column-head-txt">NO</th>
 					<th class="table-column-head-txt">공지제목</th>
 					<th class="table-column-head-txt">등록일</th>
+					<th class="table-column-head-txt">노출기간</th>
 					<th class="table-column-head-txt">노출여부</th>
 				</tr>
 			</thead>
