Refactor: 이미지 업로드 처리부분 공통으로 수정

--- a/src/main/resources/templates/admin/managers/managerDetails.html
+++ b/src/main/resources/templates/admin/managers/managerDetails.html
@@ -54,7 +54,7 @@
 			<div class="img-input-wrap">
                 <label for="input-file" class="input-file-label">
                     <input type="file" name="profileImage" id="input-file" class="input-img-file" accept=".jpg, .jpeg, .png" onchange="previewImage(event)"/>
-					<img th:src="@{/admin/common/img/profile/{profile}(profile=${manager_details.manager_profile_changed != null ? manager_details.manager_profile_changed : 'default_profile.png'})}" alt="사진" id="preview" style="display: block;"/>
+					<img th:src="@{/images/profiles/{profile}(profile=${manager_details.manager_profile_changed != null ? manager_details.manager_profile_changed : 'default_profile.png'})}" alt="사진" id="preview" style="display: block;"/>
             	</label>
             </div>
 			
