--- a/src/main/resources/templates/admin/myinfo/myinfo.html
+++ b/src/main/resources/templates/admin/myinfo/myinfo.html
@@ -128,7 +128,7 @@
                     <div class="img-input-wrap">
                         <label for="input-file" class="input-file-label">
                             <input type="file" name="profileImage" id="input-file" class="input-img-file" accept=".jpg, .jpeg, .png" onchange="previewImage(event)"/>
-							<img th:src="@{/admin/common/img/profile/{profile}(profile=${managers.manager_profile_changed != null ? managers.manager_profile_changed : 'default_profile.png'})}" alt="사진" id="preview" style="display: block;"/>
+							<img th:src="@{/images/profiles/{profile}(profile=${managers.manager_profile_changed != null ? managers.manager_profile_changed : 'default_profile.png'})}" alt="사진" id="preview" style="display: block;"/>
                         </label>
                     </div>
                     <label>형식 : JPG, JPEG, PNG / 권장 사이즈 500px * 500px</label>
