--- a/src/main/resources/templates/admin/products/edit-product.html
+++ b/src/main/resources/templates/admin/products/edit-product.html
@@ -136,7 +136,7 @@
                         <i class="fa-solid fa-plus"
                            th:if="${product_detail.book_thumbnail_changed == null or product_detail.book_thumbnail_changed.isEmpty()}"></i>
                         <img th:if="${product_detail.book_thumbnail_changed != null and !product_detail.book_thumbnail_changed.isEmpty()}"
-                             th:src="@{/admin/common/img/products/{products}/(products=${product_detail.book_thumbnail_changed != null ? product_detail.book_thumbnail_changed : 'noimg.png'})}"
+                             th:src="@{/images/books/{products}/(products=${product_detail.book_thumbnail_changed != null ? product_detail.book_thumbnail_changed : 'noimg.png'})}"
                              alt="책썸네일"
                              id="preview"/>
                     </label>
