--- a/src/main/resources/templates/admin/notice/noticeReg.html
+++ b/src/main/resources/templates/admin/notice/noticeReg.html
@@ -30,7 +30,7 @@
 			</div>
 
 			<div class="info">
-				<span class="search-list-subject important">노출 기간</span>
+				<span class="search-list-subject">노출 기간</span>
 				<div class="filter-wrap date-filter">
 
 					<div class="date-picker">
