--- a/src/main/resources/templates/admin/login/login.html
+++ b/src/main/resources/templates/admin/login/login.html
@@ -5,7 +5,6 @@
 <title>로그인 화면</title>
 <link rel="stylesheet" href="/admin/common/css/reset.css">
 <link rel="stylesheet" href="/admin/common/css/common.css" />
-<!--<link rel="stylesheet" href="/admin/common/css/style.css" />-->
 <link rel="stylesheet" href="/admin/login/css/login.css" />
 
 </head>
@@ -16,7 +15,7 @@
                 <img src="/admin/common/img/login-로고.png" alt="로고" />
             </div>
             
-            <form th:action="@{/loginProc}" method="POST" class="login-form">
+            <form th:action="@{/admin/loginProc}" method="POST" class="login-form">
                 <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}"> <!-- CSRF 토큰 추가 -->
 
                 <div th:if="${param.accessError}" class="error-message">
