Design: 헤더, 푸터, 마이페이지 css 레이아웃 설정

--- a/src/main/resources/templates/user/common/fragments/config.html
+++ b/src/main/resources/templates/user/common/fragments/config.html
@@ -8,10 +8,11 @@
 	<title>BOOKSTORE</title>
 
 	<!-- css 링크 ↓ -->
-	
-	
-
-
+	<link rel="stylesheet" href="/user/common/css/reset.css">
+	<link rel="stylesheet" href="/user/common/css/header.css">
+	<link rel="stylesheet" href="/user/common/css/footer.css">
+	<link rel="stylesheet" href="/user/common/css/mypage.css">
+	<link rel="stylesheet" href="/user/common/css/common.css">
 
 </head>
 </html>
