--- a/src/main/resources/templates/user/common/layout/myPageLayout.html
+++ b/src/main/resources/templates/user/common/layout/myPageLayout.html
@@ -6,16 +6,13 @@
 	<head th:replace="~{/user/common/fragments/config :: ConfigFragment}"></head>	 
 	 
 <body>
-	<div th:insert="~{/user/common/fragments/header :: HeaderFragment}"></div>
+	<div class="inner">
+		<header th:insert="~{/user/common/fragments/header :: HeaderFragment}"></header>
 
-	<div>
-	
-		<div>
 			<div layout:fragment="Content"></div>
-		</div>
+
+		<footer th:insert="~{/user/common/fragments/footer :: FooterFragment}"></footer>
 	</div>
-	
-	<div th:insert="~{/user/common/fragments/footer :: FooterFragment}"></div>
 
 </body>
 </html>
