Design: header css 설정

--- a/src/main/resources/templates/user/common/layout/mainLayout.html
+++ b/src/main/resources/templates/user/common/layout/mainLayout.html
@@ -20,5 +20,6 @@
 
 	<script src="/user/common/js/main.js"></script>
 	<script src="/user/common/js/btn-event.js"></script>
+	<script src="/user/common/js/header.js"></script>
 </body>
 </html>
