--- a/src/main/resources/templates/user/common/fragments/config.html
+++ b/src/main/resources/templates/user/common/fragments/config.html
@@ -7,6 +7,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>BOOKSTORE</title>
 
+	<link rel="shortcut icon" th:href="@{/user/common/imgs/favicon.ico}" type="image/x-icon">
+	<link rel="icon" th:href="@{/user/common/imgs/favicon.ico}" type="image/x-icon">
+
 	<!-- css 링크 ↓ -->
 	<link rel="stylesheet" href="/user/common/css/reset.css">
 	<link rel="stylesheet" href="/user/common/css/header.css">
@@ -14,5 +17,13 @@
 	<link rel="stylesheet" href="/user/common/css/mypage.css">
 	<link rel="stylesheet" href="/user/common/css/common.css">
 
+	<!-- 폰트어썸 -->
+	<script src="https://kit.fontawesome.com/d95a86acc3.js"></script>
+	
+	<!-- 구글 아이콘 -->
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+	
+	<!-- DatePicker -->
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
 </head>
 </html>
