Feat: 상품상세페이지 추가

--- a/src/main/resources/static/user/common/css/mypage.css
+++ b/src/main/resources/static/user/common/css/mypage.css
@@ -21,7 +21,7 @@
     font-weight: 700;
 }
 
-.fa-circle-user {
+#myprofile-warp .fa-circle-user {
     font-size: 48px;
     background-color: #fff;
     border-radius: 100%;
